# easystring

./: .gitignore  CMakeLists.txt  README.md
include/es/: string.h
src/: string.c
tests/: CMakeLists.txt
tests/src/: tests.cpp
